--- a/VKApp/View/Main.storyboard
+++ b/VKApp/View/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -173,6 +173,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="yfv-xn-mfh">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="ayQ-Ud-pXQ" id="Fbn-33-kY1"/>
+                            </connections>
+                        </searchBar>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="ayQ-Ud-pXQ" id="CwX-In-l7q"/>
                             <outlet property="delegate" destination="ayQ-Ud-pXQ" id="dRj-xs-Q8p"/>
@@ -216,6 +225,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="InQ-RF-hcx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4655.072463768116" y="63.616071428571423"/>
+        </scene>
+        <!--News-->
+        <scene sceneID="USQ-tq-b3W">
+            <objects>
+                <tableViewController title="News" id="k47-ZY-b4j" customClass="NewsTableVC" customModule="VKApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="5" estimatedSectionHeaderHeight="1" sectionFooterHeight="5" estimatedSectionFooterHeight="1" id="dak-Xk-Wp2">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="k47-ZY-b4j" id="cyl-Kg-oqF"/>
+                            <outlet property="delegate" destination="k47-ZY-b4j" id="rwZ-vl-2vl"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="News" id="P3K-fn-3Ve"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XIo-9d-Uh3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4658" y="784"/>
         </scene>
         <!--Friends-->
         <scene sceneID="Pqe-KZ-T5h">
@@ -269,14 +298,35 @@
                     <connections>
                         <segue destination="8yc-0d-DOf" kind="relationship" relationship="viewControllers" id="Zq5-vH-3nL"/>
                         <segue destination="ikF-Ma-hhQ" kind="relationship" relationship="viewControllers" id="wyF-ig-pDs"/>
+                        <segue destination="ldO-7I-hJM" kind="relationship" relationship="viewControllers" id="Qox-Yh-hFB"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WOI-q9-GON" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2834.7826086956525" y="-312.72321428571428"/>
+            <point key="canvasLocation" x="2888" y="-313"/>
+        </scene>
+        <!--News-->
+        <scene sceneID="AHY-wY-1x5">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ldO-7I-hJM" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="News" image="newspaper" catalog="system" id="Al0-5Y-oKf"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gcZ-oO-KsW">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="k47-ZY-b4j" kind="relationship" relationship="rootViewController" id="Ljz-Kp-3ub"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CMw-HJ-IYy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3745" y="784"/>
         </scene>
     </scenes>
     <resources>
+        <image name="newspaper" catalog="system" width="128" height="111"/>
         <image name="person" catalog="system" width="128" height="117"/>
         <image name="plus.bubble" catalog="system" width="128" height="110"/>
         <image name="rectangle.3.group.bubble.left.fill" catalog="system" width="128" height="110"/>
